--- a/config.yml
+++ b/config.yml
@@ -76,7 +76,7 @@ input_channel_names:
 # The output channel names that the messages will be forwarded to.
 # The user running the client must have a write access to those channels, and have the channels present on theirs dialogs.
 output_channel_names:
-  - "My test channel"
+  - "telehunt_video"
 
 # The channel IDs that you'd like to forward messages from. (You can get a channel ID by forwarding any message from it to @userinfobot , and removing the -100 from the start )
 input_channel_ids: # Input Channel ID without quotes ''
