added video listener

--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,9 @@
 config.ini
-config.yml
+# config.yml
 *.session-journal
 *.jpg
 *.png
+*.ipynb
 /real-time-tweet-streamer
 /__pycache__
 /real-time-tweet-stream
