--- a/config.yml
+++ b/config.yml
@@ -3,6 +3,7 @@ api_id: 18031383
 api_hash: "ca3e473a2237fdd835cb1f85fc419d6b"
 session_name: "ryan_v404"
 aggregator_channel: "t.me/UkrRusWarNews"
+fc_channel: "https://t.me/filtration_camps"
 # api_id: 12622619
 # api_hash: "8b71b8c43075941645017b5e163b4971"
 # bot_token: "5266680121:AAFNZ-7Md81Og0nFkDZLMg-dosG0NOoY-SE"
