--- a/channel_names.yml
+++ b/channel_names.yml
@@ -65,3 +65,24 @@ channel_names:
   - "warfakes"
   - "warwebm"
   - "z_kharkovnash"
+
+- "KyivPolitics"
+- "UkraineNow"
+- "OpenUkraine"
+- "pidrozdil4308"
+- "uniannet"
+- "voynareal"
+- "uaobozrevatel"
+- "truexanewsua"
+- "+Vr7jp2QumzJkODFi"
+- "mariupolnow"
+- "nexta_live"
+- "mvs_ukraine"
+- "mykolaivskaODA"
+- "UkrWarRep"
+- "a_shtirlitz"
+- "KharkivPolitics"
+- "Podolyak_M"
+- "UkraineN"
+- "dvish_alive"
+- "milinfolive"
