added more channels

--- a/config.yml
+++ b/config.yml
@@ -74,6 +74,25 @@ input_channel_names:
   - "warfakes"
   - "warwebm"
   - "z_kharkovnash"
+  - "KyivPolitics"
+  - "UkraineNow"
+  - "OpenUkraine"
+  - "pidrozdil4308"
+  - "uniannet"
+  - "voynareal"
+  - "uaobozrevatel"
+  - "truexanewsua"
+  - "+Vr7jp2QumzJkODFi"
+  - "mariupolnow"
+  - "nexta_live"
+  - "mvs_ukraine"
+  - "mykolaivskaODA"
+  - "UkrWarRep"
+  - "a_shtirlitz"
+  - "KharkivPolitics"
+  - "Podolyak_M"
+  - "UkraineN"
+  - "dvish_alive"
 
 my_input_channels:
   - "KyivPolitics"
